[project]
name='ong_meter_data'
description='Reads PVPC, data from i-de website and tuya metering device'

# license = {file = "LICENSE.txt"}
authors = [
    { email = "oneirag@yahoo.es", name = "Oscar Neira" }
]
readme = "README.md"
requires-python = ">=3.11"

dynamic = ["dependencies", "version"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
version = { attr = "ong_meter_data.__version__" }


[tool.setuptools.packages.find]
# scanning for namespace packages is true by default in pyproject.toml, so
# you do NOT need to include the following line.
namespaces = true
where = ["src"]

[project.urls]  # Optional
"Homepage" = "https://www.neirapinuela.es"
"Source" = "https://github.com/Oneirag/ong_meter_data"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"